ci: add missing semantic-release config

--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
-  "dependencies": {},
+  "dependencies": {
+    "@semantic-release/changelog": "^5.0.1",
+    "@semantic-release/exec": "^5.0.0",
+    "@semantic-release/git": "^9.0.0",
+    "semantic-release": "^17.1.1"
+  },
   "devDependencies": {
     "@commitlint/cli": "^9.1.1",
     "@commitlint/config-conventional": "^9.1.1",
@@ -13,6 +18,39 @@
   "commitlint": {
     "extends": [
       "@commitlint/config-conventional"
+    ]
+  },
+  "release": {
+    "plugins": [
+      "@semantic-release/commit-analyzer",
+      "@semantic-release/release-notes-generator",
+      "@semantic-release/changelog",
+      [
+        "@semantic-release/exec",
+        {
+          "prepareCmd": ".travis/prepare-release.sh ${nextRelease.version} ${nextRelease.channel}",
+          "publishCmd": ".travis/publish-release.sh ${nextRelease.version} ${nextRelease.channel}"
+        }
+      ],
+      [
+        "@semantic-release/git",
+        {
+          "assets": [
+            "gradle.properties",
+            "CHANGELOG.md"
+          ]
+        }
+      ],
+      [
+        "@semantic-release/github",
+        {
+          "assets": [
+            {
+              "path": "build/libs/*.jar"
+            }
+          ]
+        }
+      ]
     ]
   }
 }
