--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'maven-publish'
     id 'checkstyle'
     id 'jacoco'
-    id 'com.github.ben-manes.versions' version '0.28.0'
+    id 'com.github.ben-manes.versions' version '0.29.0'
     id 'com.autonomousapps.dependency-analysis' version '0.52.0'
     id 'dev.jacomet.logging-capabilities' version '0.9.0'
     id 'com.jfrog.bintray' version '1.8.5'
@@ -17,11 +17,11 @@ repositories {
 dependencies {
     api 'com.github.junrar:junrar:5.0.0'
     api 'org.apache.commons:commons-vfs2:2.6.0'
-    implementation 'commons-logging:commons-logging:1.2'
+    implementation 'org.slf4j:slf4j-api:1.7.9'
 
+    testRuntimeOnly 'ch.qos.logback:logback-classic:1.2.3'
     testImplementation 'org.junit.jupiter:junit-jupiter:5.6.2'
-    testImplementation 'commons-io:commons-io:1.3.2'
-    testImplementation 'org.mockito:mockito-core:2.23.4'
+    testImplementation 'commons-io:commons-io:2.7'
     testImplementation 'org.assertj:assertj-core:3.16.1'
 }
 
