--- a/build.gradle
+++ b/build.gradle
@@ -116,6 +116,9 @@ bintray {
             }
             mavenCentralSync {
                 sync = true
+                user = System.getenv('MAVENCENTRAL_USER')
+                password = System.getenv('MAVENCENTRAL_PASSWORD')
+                close = '1'
             }
         }
     }
