ci: rename ci script folder

--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
       [
         "@semantic-release/exec",
         {
-          "prepareCmd": ".travis/prepare-release.sh ${nextRelease.version} ${nextRelease.channel}",
-          "publishCmd": ".travis/publish-release.sh ${nextRelease.version} ${nextRelease.channel}"
+          "prepareCmd": "ci/prepare-release.sh ${nextRelease.version} ${nextRelease.channel}",
+          "publishCmd": "ci/publish-release.sh ${nextRelease.version} ${nextRelease.channel}"
         }
       ],
       [
