--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,38 +4,44 @@ on: [ pull_request, push ]
 
 jobs:
   test:
-    name: test jdk8
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        java: [ 8, 11, 17 ]
+    name: Test JDK ${{ matrix.java }}
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-java@v1
+      - uses: actions/setup-java@v2
         with:
-          java-version: 1.8
-      - name: Cache Gradle packages
-        uses: actions/cache@v2
-        with:
-          path: ~/.gradle/caches
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
-          restore-keys: ${{ runner.os }}-gradle
+          java-version: ${{ matrix.java }}
+          java-package: 'jdk'
+          distribution: 'temurin'
+          cache: 'gradle'
       - name: Build
         run: ./gradlew build
       - name: Jacoco
         run: ./gradlew jacocoTestReport
-      - uses: codecov/codecov-action@v1
+      - uses: codecov/codecov-action@v2
+        if: matrix.java == '8'
+
   release:
     name: semantic release
     runs-on: ubuntu-latest
     needs: test
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
+      - uses: actions/setup-node@v2
         with:
-          node-version: 14.x
-      - uses: actions/setup-java@v1
+          node-version: '16'
+          cache: 'npm'
+      - uses: actions/setup-java@v2
         with:
-          java-version: 1.8
+          java-version: '8'
+          java-package: 'jdk'
+          distribution: 'temurin'
+          cache: 'gradle'
       - name: Install dependencies
-        run: npm install --only=production
+        run: npm ci --omit=dev --ignore-scripts
       - name: Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
